--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "modern-normalize": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icon": "^1.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
